syntax = "proto3";

package stats.service.analyzer;

import "stats/messages/recommendations.proto";

option java_package = "ru.yandex.practicum.stats.analyzer.grpc";

service RecommendationsController {
  rpc GetRecommendationsForUser (stats.messages.UserPredicationsRequestProto)
      returns (stream stats.messages.RecommendedEventProto);

  rpc GetSimilarEvents (stats.messages.SimilarityEventsRequestProto)
      returns (stream stats.messages.RecommendedEventProto);

  rpc GetInteractionsCount (stats.messages.InteractionsCountRequestProto)
      returns (stream stats.messages.RecommendedEventProto);
}